--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,8 +1,8 @@
 book_filename: "finalproj"
 output_dir: docs
 delete_merged_file: true
-edit: https://github.com/YOUR GITHUB USERNAME/YOUR REPO NAME/edit/main/%s
-view: https://github.com/YOUR GITHUB USERNAME/YOUR REPO NAME/blob/main/%s
+edit: https://github.com/MISSZH0U/international_students_inUS/edit/main/%s
+view: https://github.com/MISSZH0U/international_students_inUS/blob/main/%s
 language:
   ui:
     chapter_name: "Chapter "
